--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "portfolio-website",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Portfolio Website with Tailwind CSS",
   "scripts": {
     "compile": "tailwindcss -i ./src/input.css -o ./src/output.css",
     "compile:watch": "tailwindcss -i ./src/input.css -o ./src/output.css --watch",
     "build": "tailwindcss -i ./src/input.css -o ./src/output.css --minify"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "tailwindcss",
+    "portfolio",
+    "website"
+  ],
+  "author": "Rishav Pandey",
+  "license": "MIT",
   "devDependencies": {
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.13",
